First unit test for the Rope constructor

--- a/OtherStructures.Tests/OtherStructures.Tests.csproj
+++ b/OtherStructures.Tests/OtherStructures.Tests.csproj
@@ -50,7 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BinaryTrees\RopeTests\RopeConstructorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OtherStructures\OtherStructures.csproj">
+      <Project>{95B5DCAA-51D9-4524-A657-80B75837BA6F}</Project>
+      <Name>OtherStructures</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
