--- a/OtherStructures/OtherStructures.csproj
+++ b/OtherStructures/OtherStructures.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrays\GapBuffer.cs" />
+    <Compile Include="BinaryTrees\Rope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
