--- a/OtherStructures.Tests/OtherStructures.Tests.csproj
+++ b/OtherStructures.Tests/OtherStructures.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BinaryTrees\RopeTests\RopeAppendTests.cs" />
+    <Compile Include="BinaryTrees\RopeTests\RopeDepthAndWidthTests.cs" />
     <Compile Include="BinaryTrees\RopeTests\RopeConstructorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
