--- a/OtherStructures/OtherStructures.csproj
+++ b/OtherStructures/OtherStructures.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrays\GapBuffer.cs" />
+    <Compile Include="Arrays\LinkedList.cs" />
     <Compile Include="BinaryTrees\Rope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
