More Linked List stuff
Added GetEnumerator implementation with test
Fixed the implementation of Add and Remove on the LinkedList

--- a/OtherStructures.Tests/OtherStructures.Tests.csproj
+++ b/OtherStructures.Tests/OtherStructures.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Arrays\LinkedListTests\LinkedListAddTests.cs" />
+    <Compile Include="Arrays\LinkedListTests\LinkedListGetEnumeratorTests.cs" />
     <Compile Include="Arrays\LinkedListTests\LinkedListRemoveTests.cs" />
     <Compile Include="BinaryTrees\RopeTests\RopeAppendTests.cs" />
     <Compile Include="BinaryTrees\RopeTests\RopeDepthAndWidthTests.cs" />
